[tool.poetry]
name = "buffalogold"
version = "0.1.0"
description = ""
authors = ["Nils Fohlin <nils@fohlin.net>"]

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.4.0"
structlog = "^20.2.0"
colorama = "^0.4.4"
marshmallow = "^3.10.0"
marshmallow-oneofschema = "^2.1.0"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
